header spacing fixed

--- a/src/app/features/products/components/all-products/all-products.component.scss
+++ b/src/app/features/products/components/all-products/all-products.component.scss
@@ -1,20 +1,6 @@
 @import "src/assets/css/variables.scss";
 .breadcrumbs {
     margin-top: 20px;
-    .uk-breadcrumb > :nth-child(n+2):not(.uk-first-column)::before{
-        margin: 0 5px;
-        content: ">";
-    }
-    .uk-breadcrumb {
-        font-size: 18px; 
-        color: $primary-txt-color;
-        margin-top: 20px;
-    }
-    .uk-breadcrumb b {
-        font-size: 18px;
-        color:#000;
-        font-weight: bold;
-    }
 }
 h2{
     color: $font-light-black;
